trunk/Archive2/ac/f61bbfe4bf59db/output
main.cpp:2:1: error: 'adadadawd' does not name a type
 adadadawd
 ^
main.cpp: In function 'void Vypis(const Matice&)':
main.cpp:57:2: error: 'cout' was not declared in this scope
  cout << "pocet radku = " << matice.VratPocetRadku() << endl;
  ^
main.cpp:57:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:57:57: error: 'endl' was not declared in this scope
  cout << "pocet radku = " << matice.VratPocetRadku() << endl;
                                                         ^
main.cpp:57:57: note: suggested alternative:
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
